<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="136dp"
    android:layout_height="216dp">

    <View
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tile_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/headerImageView"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:adjustViewBounds="true"
        android:background="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/koni_black"
        android:text="@string/maiden"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/headerImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/objectImageView"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        android:background="@drawable/label_image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/hedgehog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImageView" />

    <TextView
        android:id="@+id/stageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/stage_list"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectImageView" />

    <View
        android:id="@+id/progressBgView"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:layout_margin="8dp"
        android:background="@drawable/enhancement_progress_bg"
        app:layout_constraintBottom_toBottomOf="@id/progressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/progressView" />

    <View
        android:id="@+id/progressView"
        android:layout_width="42dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/enhancement_progress"
        app:layout_constraintStart_toStartOf="@id/progressBgView"
        app:layout_constraintTop_toBottomOf="@id/stageTextView" />

    <TextView
        android:id="@+id/progressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="20%"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@id/progressBgView"
        app:layout_constraintEnd_toEndOf="@+id/progressBgView"
        app:layout_constraintTop_toTopOf="@+id/progressBgView" />

    <Button
        android:id="@+id/button"
        style="@style/ActionButton"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:text="@string/upgrade_btn"
        app:layout_constraintTop_toBottomOf="@id/progressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>